--- a/src/app/shared/component/checkout/checkoutPix.component.html
+++ b/src/app/shared/component/checkout/checkoutPix.component.html
@@ -8,6 +8,7 @@
     <button mat-raised-button [disabled]="btnActive" color="primary" class="ng-btn" (click)="colcarTexto(qr.qrCodeLink)">
         {{titule}} <mat-icon>content_copy</mat-icon>
     </button>
+    <div id="cardPaymentBrick_container"></div>
     <div class="img-compra-segura"></div>
 </div>
 
