--- a/src/app/features/pages/planos/checkout01/checkoutPlanos.component.html
+++ b/src/app/features/pages/planos/checkout01/checkoutPlanos.component.html
@@ -73,191 +73,7 @@
                 <div class="ng-subContainer">
                     <h4>Métodos de Pagamento</h4>
                     <div class="form-field">
-                        <section class="ng-cont ng-contPagamento">
-                            <div class="ng-metodoPagamento tab" 
-                            [class.active]="activeTab === 'credito'"
-                            (click)="activeTab = 'credito'">
-                                <mat-icon class="icon">credit_card</mat-icon>
-                                <p>Cartão de Crédito</p>
-                            </div>
-                            <div class="ng-metodoPagamento tab" 
-                            [class.active]="activeTab === 'debito'"
-                            (click)="activeTab = 'debito'">
-                                <mat-icon class="icon">credit_card</mat-icon>
-                                <p>Cartão de Débito</p>
-                            </div>
-                            <div class="ng-metodoPagamento tab" 
-                            [class.active]="activeTab === 'pix'"
-                            (click)="activeTab = 'pix'">
-                                <img
-                                    src="logos/logoPix.png"
-                                    alt="bandeira"
-                                    class="ng-metodoPagamento"
-                                />
-                            </div>
-                        </section>
-                        <!-- Conteúdo das abas -->
-                        <div class="tab-content" *ngIf="activeTab === 'credito'">
-                          <div class="ng-metodoPagamento">
-                            <form class="ng-form2" id="form-card">       
-                                <input type="hidden" id="cardholderName" data-checkout="cardholderName" [value]="this.form.checkoutForm.get('NomeCompleto')">                 
-                                <div class="form-field ng-cont-img">
-                                    <section class="ng-cont-card1">
-                                        <label for="Número do Cartão">Número do Cartão</label>
-                                        <input
-                                        type="number"
-                                        id="cardNumber"
-                                        data-checkout="cardNumber"
-                                        placeholder="0000 0000 0000 0000"
-                                        class="input-full-width"
-                                        mask="0000000000000000"
-                                        (input)="onInputCardNumber($event)"
-                                        />
-                                        <div class="error" *ngIf="isRequired('cardNumber')">
-                                        Por favor, informe o Número do Cartão.
-                                        </div>
-                                    </section>
-                                    <!-- Exibe o ícone da bandeira -->
-                                    <img
-                                    *ngIf="bandeira"
-                                    [src]="'bandeirasCard/' + bandeira + '.png'"
-                                    [alt]="bandeira"
-                                    class="bandeira-icon"
-                                    />
-                                </div> 
-                                <section class="ng-cont-card2">
-                                    <div class="form-field">
-                                        <label for="mes">Mês</label>
-                                        <input
-                                          type="text"
-                                          id="cardExpirationMonth"
-                                          data-checkout="cardExpirationMonth"
-                                          placeholder="00"
-                                          class="input-full-width"
-                                          mask="00"
-                                        />
-                                        <div class="error" *ngIf="isRequired('mesAno')">
-                                          Informe o Mês!
-                                        </div>
-                                    </div>
-                                    <div class="form-field">
-                                        <label for="ano">Ano</label>
-                                        <input
-                                          type="text"
-                                          id="cardExpirationYear"
-                                          data-checkout="cardExpirationYear"
-                                          placeholder="0000"
-                                          class="input-full-width"
-                                          mask="0000"
-                                        />
-                                        <div class="error" *ngIf="isRequired('mesAno')">
-                                            Informe o Ano!
-                                        </div>
-                                    </div>
-                                    <div class="form-field">
-                                        <label for="cc">CVV</label>
-                                        <input
-                                          type="number"
-                                          id="securityCode"
-                                          data-checkout="securityCode"
-                                          placeholder="000"
-                                          class="input-full-width"
-                                          mask="000"
-                                        />
-                                        <div class="error" *ngIf="isRequired('cvv')">
-                                          Por favor, insira seu nome completo.
-                                        </div>
-                                    </div>      
-                                </section>     
-                            </form>
-                          </div>
-                        </div>
-                      
-                        <div class="tab-content" *ngIf="activeTab === 'debito'">
-                            <div class="ng-metodoPagamento">
-                                <form class="ng-form2">                        
-                                    <div class="form-field ng-cont-img">
-                                        <section class="ng-cont-card1">
-                                            <label for="Número do Cartão">Número do Cartão</label>
-                                            <input
-                                            type="number"
-                                            id="cardNumber"
-                                            data-checkout="cardNumber"
-                                            placeholder="0000 0000 0000 0000"
-                                            class="input-full-width"
-                                            mask="0000000000000000"
-                                            (input)="onInputCardNumber($event)"
-                                            />
-                                            <div class="error" *ngIf="isRequired('cardNumber')">
-                                            Por favor, informe o Número do Cartão.
-                                            </div>
-                                        </section>
-                                        <!-- Exibe o ícone da bandeira -->
-                                        <img
-                                        *ngIf="bandeira"
-                                        [src]="'bandeirasCard/' + bandeira + '.png'"
-                                        [alt]="bandeira"
-                                        class="bandeira-icon"
-                                        />
-                                    </div> 
-                                    <section class="ng-cont-card2">
-                                        <div class="form-field">
-                                            <label for="mes">Mês</label>
-                                            <input
-                                              type="text"
-                                              id="cardExpirationMonth"
-                                              data-checkout="cardExpirationMonth"
-                                              placeholder="00"
-                                              class="input-full-width"
-                                              mask="00"
-                                            />
-                                            <div class="error" *ngIf="isRequired('mesAno')">
-                                              Data de vencimento inválida!
-                                            </div>
-                                        </div>
-                                        <div class="form-field">
-                                            <label for="Ano">Ano</label>
-                                            <input
-                                              type="text"
-                                              id="cardExpirationYear"
-                                              data-checkout="cardExpirationYear"
-                                              placeholder="0000"
-                                              class="input-full-width"
-                                              mask="0000"
-                                            />
-                                            <div class="error" *ngIf="isRequired('mesAno')">
-                                              Data de vencimento inválida!
-                                            </div>
-                                        </div>
-                                        <div class="form-field">
-                                            <label for="CVV">CVV</label>
-                                            <input
-                                              type="number"
-                                              id="securityCode"
-                                              data-checkout="securityCode"
-                                              placeholder="000"
-                                              class="input-full-width"
-                                              mask="000"
-                                            />
-                                            <div class="error" *ngIf="isRequired('cvv')">
-                                              Por favor, insira o CVV.
-                                            </div>
-                                        </div>      
-                                    </section>     
-                                </form>
-                              </div>
-                        </div>
-                      
-                        <div class="tab-content" *ngIf="activeTab === 'pix'">
-                            <div class="ng-contPix">
-                                <h3>O QR Code do seu pagamento pix será gerado ao clicar em FINALIZAR PAGAMENTO!</h3>
-                                @if (spinner) {
-                                    <mat-spinner></mat-spinner>
-                                }
-                            </div>
-                        </div>
-                      
-                        
+                        <app-paymentMP></app-paymentMP>
                     </div>
                 </div>
                 
