--- a/src/app/features/pages/planos/homePlanos/homePlanos.component.html
+++ b/src/app/features/pages/planos/homePlanos/homePlanos.component.html
@@ -66,7 +66,7 @@
                                 <li>Gerenciamento de entregadores</li>
                                 <li>Cardápio Digital</li>
                             </ul>
-                            <button class="ng-btn-cadastrar">Cadastrar Agora</button>
+                            <button class="ng-btn-cadastrar" (click)="pageCheckout02()">Cadastrar Agora</button>
                         </div>
                     </div>
                 </div>
