--- a/src/app/features/pages/planos/checkout03/checkoutPlanos03.component.scss
+++ b/src/app/features/pages/planos/checkout03/checkoutPlanos03.component.scss
@@ -1,46 +1,33 @@
 .main {
     display: flex;
     justify-content: center;
+    width: 100%;
+    padding: 30px 0;
     background-color: #F2F2F2;
+
     .ng-checkout {
         display: flex;
-        justify-content: space-around;
+        align-items: center;
+        justify-content: center;
         gap: 0 40px;
         width: 70%;
 
         .ng-container {
             display: flex;
             flex-direction: column;
+            height: 100vh;
             flex: 2;
+            gap: 20px;
             border: 1px solid #ccc;
             border-radius: 10px;
-            background-color: #41b44a;
-            .ng-subContainer2 {
-                display: flex;
-                flex-direction: column;
-                font-size: 14px;
-                margin-top: 29px;
-                height: 100vh;
+            overflow: scroll;
 
-                
-
-                /// Formulario e Input estilizado ------------------------------------------------------------///
-                .form-field {
-                    display: flex;
-                    flex-direction: column;
-                    width: 100%;
-                    margin-bottom: 1rem;
-                    font-size: 12px;
-                    gap: 5px 0;
-                }
-                }
             .ng-subContainer {
                 display: flex;
                 flex-direction: column;
                 padding: 15px;
                 font-size: 14px;
                 gap: 30px 0;
-                margin-top: 60px;
                 
 
                 /// Formulario e Input estilizado ------------------------------------------------------------///
@@ -79,16 +66,15 @@
                         justify-content: space-between;
 
                         .ng-metodoPagamento {
-                            width: 100%;
-
                             display: flex;
                             justify-content: center;
                             align-items: center;
+                            flex: 1;
                             text-align: center;
                             font-size: 14;
                             cursor: pointer;
                             font-weight: bold;
-                            padding: 5px 20px;
+                            padding: 1px 20px;
                             border-radius: 10px;
                             gap: 2px;
                             background-color: #dddddd;
@@ -105,8 +91,8 @@
                       
                       .tab-content {
                         background-color: #f5f5f5;
+                        padding: 15px 0;
                         border-radius: 10px;
-                        margin-top: 25px;
 
                         .ng-contPix {
                             display: flex;
@@ -116,7 +102,7 @@
                             width: 100%;
                             font-weight: 600;
                             color: rgb(201, 12, 12);
-                            gap: 10px 0;
+                            gap: 20px 0;
                         }
                         
                         .ng-cont-card2 {
