adicionando api de planos

--- a/src/app/shared/component/banner/banner.component.html
+++ b/src/app/shared/component/banner/banner.component.html
@@ -1,3 +1,6 @@
 <div class="ng-banner">
-    <img [src]="img" alt="">
+    <figure class="ng-img">
+       <h1>PROMOÇÕES DA SEMANA</h1>
+       <h3></h3>
+    </figure>
 </div>
