--- a/src/app/features/pages/planos/homePlanos/homePlanos.component.html
+++ b/src/app/features/pages/planos/homePlanos/homePlanos.component.html
@@ -1,12 +1,11 @@
 <app-page-container>
     <div class="main">
-        <div class="ng-planos">            
-            <section>
                 <app-banner [img]="img"></app-banner>
-            </section>
+        <div class="ng-planos">            
+            
             <section class="ng-section02">
                 <h3 class="ng-title">Conheça Nossos Planos</h3>
-                <p>Para quem busca uma solução eficiente para gestão de pedidos e atendimento. Para quem busca uma solução eficiente para gestão de pedidos e atendimento. Para quem busca uma solução eficiente para gestão de pedidos e atendimento.</p>
+                <p class="ng-sutitulo">Para quem busca uma solução eficiente para  gestão de pedidos e atendimento. Para quem busca uma solução eficiente para <br>gestão de pedidos e atendimento. Para quem busca uma solução eficiente para gestão de pedidos e atendimento.</p>
                 <div class="ng-container-planos" >
                    @for (item of data?.planos; track $index) {
                     <app-planos-itens [itens]="item"></app-planos-itens>
