--- a/src/app/features/pages/planos/homePlanos/homePlanos.component.scss
+++ b/src/app/features/pages/planos/homePlanos/homePlanos.component.scss
@@ -1,30 +1,34 @@
 .main{
-    background-color: #F2F2F2;
+    background-color: #0a1630;
     width: 100%;
 
     .ng-planos {
         display: flex;
         align-items: center;
         flex-direction: column;
-        gap: 50px 0;
-
-        section {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-        }
 
         .ng-section02{
             width: 80%;
-            height: 100vh;
+            box-sizing: border-box;
             gap: 25px 0;
+            .ng-title{
+                color: rgba(98, 222, 231, 0.836);
+                font-size: 20px;
+                font-weight: bold;
+            }
+            .ng-sutitulo{
+                color: #485374;                
+                font-size: 16px;
+                padding-top: 5px;
+                margin: 5px;
+            }
+
 
             .ng-container-planos {
                 display: flex;
                 justify-content: center;
-                gap: 0 20px;
                 font-size: 14px;
-                padding: 0 20px;
+                padding:30px 20px;
 
                 .ng-box {
                     background: linear-gradient(to bottom, #41b44a, #000000);
