--- a/src/app/shared/component/plano_itens/planositem.component.scss
+++ b/src/app/shared/component/plano_itens/planositem.component.scss
@@ -1,43 +1,66 @@
 .ng-plano {
-                        display: flex;
-                        flex-direction: column;
-                        width: 300px;
-                        gap: 20px;
-                        color: #444;                        
-                        background: #fff; /* ou a cor de fundo */
-                        border-radius: 12px; /* um pouco menor que o externo */
-                        padding: 10px;
-                        box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.12);
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 100%;
+    gap: 20px;
+    background: #1E3A8A;
+    color: #F5F5F5;
+    border-top-right-radius: 20px;
+     border-top-left-radius: 5px;
+    margin: 5px;
+    box-shadow:
+    0 8px 24px rgba(0, 0, 0, 0.5),    /* sombra base */
+    0 0 10px rgba(94, 125, 184, 0.3); 
 
-                        .ng-btn-cadastrar {
-                            width: 100%;
-                            height: 40px;
-                            background-color: #41b44a;
-                            color: #fff;
-                            font-weight: 600;
-                            border-radius: 10px;
-                            border: none;
-                            box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.2);
-                        }
+    padding: 1.5rem;
 
-                        .ng-btn-cadastrar:hover {                        
-                            background-color: #73ca7b;
-                        }
+    .ng-off {
+        display: flex;
+        gap: 0 10px;
+        align-items: center;
 
-                        .ng-btn-cadastrar:active {
-                            transform: scale(0.97);
-                        }
+        p {
+            color: #3331c2;
+            font-weight: bolder;
+        }
+    }
 
-                        ul {
-                            text-align: left;
 
-                            li {
-                                font-size: 14px;
-                                padding: 5px 0;
-                                margin: 2px;
-                                font-weight: bold;
-                                text-wrap: 10px;
-                            }
-                        }
+    .ng-btn-cadastrar {
+        width: 100%;
+        height: 40px;
+        background-color: #41b44a;
+        color: #fff;
+        font-weight: 600;
+        border-radius: 10px;
+        border: none;
+        box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.2);
+         cursor: pointer;
+    }
 
-                    }
+    .ng-btn-cadastrar:hover {
+        background-color: #73ca7b;
+    }
+
+    .ng-btn-cadastrar:active {
+        transform: scale(0.97);
+    }
+
+    ul {
+        text-align: left;
+
+        li {
+            font-size: 14px;
+            padding: 5px 0;
+            margin: 2px;
+            font-weight: bold;
+            text-wrap: 10px;
+        }
+    }
+
+}
+.ng-plano:hover{
+    transform: translateY(-1px);
+   
+} 
