--- a/src/app/shared/component/plano_itens/planositem.component.html
+++ b/src/app/shared/component/plano_itens/planositem.component.html
@@ -6,7 +6,7 @@
         </div>
         <p>{{itens?.subDescricaoPermition}}</p>
          @if (itens?.promocao=="") {
-             <h1>{{itens?.price}}</h1>
+             <h1>R$ {{itens?.price}}</h1>
          }@else {
             <h1>{{itens?.promocao}}</h1>
          }
@@ -14,6 +14,6 @@
             <li [style.white-space]="'pre-line'">{{ sanitizeDescription(itens?.description) }}</li>
             
         </ul>
-        <button (click)="ativaModal()" class="ng-btn-cadastrar">Cadastrar Agora</button>
+        <button (click)="pageCheckout02(itens)" class="ng-btn-cadastrar">Cadastrar Agora</button>
     </div>
 </div>
