--- a/src/app/shared/component/plano_itens/planositem.component.scss
+++ b/src/app/shared/component/plano_itens/planositem.component.scss
@@ -1,9 +1,9 @@
 .ng-plano {
     display: flex;
     flex-direction: column;
-    width: 300px;
-    height: 100%;
-    gap: 20px;
+    width: 320px;
+    height:430px;
+    gap: 20px 30px;
     background: #1E3A8A;
     color: #F5F5F5;
     border-top-right-radius: 20px;
@@ -12,7 +12,7 @@
     box-shadow:
     0 8px 24px rgba(0, 0, 0, 0.5),    /* sombra base */
     0 0 10px rgba(94, 125, 184, 0.3); 
-
+    position: relative;
     padding: 1.5rem;
 
     .ng-off {
@@ -28,7 +28,9 @@
 
 
     .ng-btn-cadastrar {
-        width: 100%;
+        position: absolute;
+        bottom: 0;
+        width: 87%;
         height: 40px;
         background-color: #41b44a;
         color: #fff;
@@ -37,6 +39,8 @@
         border: none;
         box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.2);
          cursor: pointer;
+         margin-right: 25px;
+         margin-bottom: 22px;
     }
 
     .ng-btn-cadastrar:hover {
