--- a/src/app/features/pages/auth/signup/signup.component.scss
+++ b/src/app/features/pages/auth/signup/signup.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
     height: 100vh;
     flex-direction: column;
     gap: 10px;
