--- a/src/app/features/pages/planos/checkout02/checkoutPlanos02.component.scss
+++ b/src/app/features/pages/planos/checkout02/checkoutPlanos02.component.scss
@@ -1,18 +1,256 @@
 .main {
     display: flex;
+    width: 100%;
+    background-color: #F2F2F2;
+
+    .ng-checkout {
+        display: flex;
+        flex-direction:column-reverse;
+        gap: 10px 0;
+        padding: 15px;
+        .ng-container {
+            display: flex;
+            flex-direction: column;
+            gap: 35px 0;
+            padding: 0;
+
+            .ng-subContainer, .ng-subContainer2 {
+                display: flex;
+                flex-direction: column;
+                font-size: 14px;
+                gap: 15px 0;
+
+                select {
+                    border: 1px solid #ccc;
+                    border-radius: 3px;
+                    padding: 4px;
+                }
+                
+
+                /// Formulario e Input estilizado ------------------------------------------------------------///
+                .form-field {
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    font-size: 12px;
+                    gap: 2px;
+                    padding: 0 5px;
+
+                    .ng-cont {
+                        display: flex;
+                        width: 100%;
+                        gap: 0 15px;
+
+                        .ng-checkbox {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            flex: 1;
+
+                            label {
+                                display: flex;
+                                gap: 0 5px;
+                            }
+                        }
+
+                        .ng-input-cpf {
+                            flex: 4;
+                        }
+
+                    }
+
+                    .ng-contPagamento {
+                        justify-content: space-between;
+
+                        .ng-metodoPagamento {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            flex: 1;
+                            text-align: center;
+                            font-size: 8;
+                            cursor: pointer;
+                            font-weight: 400;
+                            padding: 2px 4px;
+                            border-radius: 4px;
+                            gap: 2px;
+                            background-color: #dddddd;
+                        }
+
+                    }
+
+                    
+                    .tab.active {
+                        background-color: #eee;
+                        color: #41b44a;
+                        border: 2px solid #41b44a;
+                    }
+                      
+                    .tab-content {
+                    background-color: #f5f5f5;
+                    padding: 20px 0;
+                    border-radius: 10px;
+                    }
+                    .ng-pagamento {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px 0;
+                    }
+
+                    .ng-contPix {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        width: 100%;
+                        font-weight: 600;
+                        color: rgb(201, 12, 12);
+                        gap: 20px 0;
+                    }
+                    
+                    .ng-cont-card2 {
+                        width: 100%;
+                        display: flex;
+                        gap: 0 10px;   
+
+                    }                      
+                    
+                    .btn-pagamento {
+                        width: 100%;
+                        height: 45px;
+                        background-color: #41b44a;
+                        color: #fff;
+                        font-weight: 600;
+                        border-radius: 10px;
+                        border: none;
+                        box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.2);
+                    }
+
+                    .btn-pagamento:hover {                        
+                        background-color: #73ca7b;
+                    }
+
+                    .btn-pagamento:active {
+                        transform: scale(0.97);
+                    }
+
+                  
+                }
+                  
+                .input-full-width {
+                    width: 100%;
+                    padding: 10px;
+                    border: 1px solid #ccc;
+                    border-radius: 4px;
+                    font-size: 16px;
+                  }
+                  
+                  .input-full-width:focus {
+                    border-color: #41b44a;
+                    outline: none;
+                  }
+                  
+                  .error {
+                    color: rgb(184, 40, 40);
+                    border-color: rgb(184, 40, 40);
+                    font-size: 12px;
+                    margin-top: 4px;
+                  }
+                  ///-----------------------------------------------------------------------------///
+                
+                
+                .ng-cont-img {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    width: 100%;
+                    gap: 15px;
+                    section {
+                        width: 70%;
+                    }
+                    .bandeira-icon {
+                        width: 4rem;
+                        height: 1.5rem;
+                        margin-top: 8px;
+                    }
+                  
+                }
+            }
+
+            
+
+        }
+
+        .ng-container2 {
+            display: flex;
+            flex-direction: column;
+            gap: 25px 0;
+            padding: 15px;
+            border-radius: 10px;
+
+            .ng-subContainer2 {
+                display: flex;
+                flex-direction: column;
+                gap: 15px 0;
+                .ng-itemCompra {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;
+                    border: 2px solid #ccc;
+                    border-radius: 10px;
+                    padding: 10px;
+                    gap: 10px 0;
+
+                    img {
+                        width: 80%;
+                        height: 80%;
+                        object-fit: cover;
+                        background-size: cover;
+                    }
+
+                    div {
+                        width: 100%;
+                        text-align: center;
+                        font-size: 16px;
+                    }
+                }
+
+                .valores {
+                    display: flex;
+                    gap: 0 10px;
+                    font-size: 12px;
+                }
+            }
+        }
+
+        .ng-my-order {
+            flex: 1;
+            border-right: 1px solid #ccc;
+        }
+    }
+}
+
+
+
+@media screen and (min-width: 1250px) {
+    .main {
+    display: flex;
     justify-content: center;
+    align-items: flex-start;
     width: 100%;
     padding: 8px;
     background-color: #F2F2F2;
 
     .ng-checkout {
         display: flex;
-        align-items: self-start;
+        align-items: flex-start;
         justify-content: center;
+        flex-direction: row;
         gap: 0 40px;
         width: 70%;
 
-        .ng-container {
+        .ng-container, .ng-container2 {
             display: flex;
             flex-direction: column;
             flex: 2;
@@ -21,7 +259,7 @@
             border: 1px solid #ccc;
             border-radius: 10px;
 
-            .ng-subContainer {
+            .ng-subContainer, .ng-subContainer2 {
                 display: flex;
                 flex-direction: column;
                 font-size: 14px;
@@ -161,11 +399,12 @@
                 }
             }
 
-            .ng-my-orderContainer {
+            .ng-subContainer2 {
                 .ng-itemCompra {
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    flex-direction: row;
                     border: 2px solid #ccc;
                     border-radius: 10px;
                     padding: 10px;
@@ -179,9 +418,11 @@
                         background-size: cover;
                     }
 
-                    div {                        
+                    div {                
+                        display: flex;        
                         flex: 3;
                         font-size: 12px;
+                        flex-direction: column;
                     }
                 }
 
@@ -220,4 +461,7 @@
             border-right: 1px solid #ccc;
         }
     }
+}
+
+
 }
