--- a/src/app/shared/component/aside-modal/aside-modal.component.scss
+++ b/src/app/shared/component/aside-modal/aside-modal.component.scss
@@ -10,6 +10,34 @@
     align-items: center;
     justify-content: center;
     .modal{
+        width: 90%;
+        border-radius: 5px;
+        padding: 8px 10px;
+        .ng-btn{
+            display: flex;
+            width: 100%;
+            justify-content: end;
+            color: #ddd;
+            font-size: 32px;
+            font-weight: 700;
+        }
+    }
+
+}
+
+@media screen and (min-width: 1250px) {
+    .ng-modal{
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .modal{
         width: 40%;
         border-radius: 5px;
         padding: 8px 10px;
@@ -23,4 +51,6 @@
         }
     }
 
+}
+    
 }
