--- a/src/app/shared/component/banner/banner.component.scss
+++ b/src/app/shared/component/banner/banner.component.scss
@@ -4,7 +4,7 @@
     scrollbar-width: thin;
     .ng-img {
         width: 100%;
-        height: 350px;
+        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
