--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,11 @@
   box-sizing: border-box;
   overflow: hidden;
 }
+html, body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
 
 body {
   font-size: var();
