Ajustando responsividade da tela mobile de checkout 04

--- a/src/app/features/pages/planos/checkout02/checkoutPlanos02.component.html
+++ b/src/app/features/pages/planos/checkout02/checkoutPlanos02.component.html
@@ -54,7 +54,7 @@
                                 </div>
                                 <div class="ng-metodoPagamento tab" [class.active]="activeTab === 'pix'"
                                     (click)="setTab('pix')">
-                                    <img src="logos/logoPix.png" alt="bandeira" class="ng-metodoPagamento" />
+                                    <img src="logos/logoPix.png" alt="bandeira" />
                                 </div>
                             </section>
                             <!-- Conteúdo das abas -->
