--- a/src/app/features/pages/planos/checkout02/checkoutPlanos02.component.html
+++ b/src/app/features/pages/planos/checkout02/checkoutPlanos02.component.html
@@ -41,6 +41,12 @@
                         </div>
                     </div>
                     <div class="ng-subContainer">
+                        @if (isSmallScreen) {    
+                                <img src="pagamentos/compra_segura_mercado_pago.png" 
+                                alt="Pagamento seguro Mercado Pago"
+                                class="img-compra-segura"
+                                >
+                            }
                         <h4>Métodos de Pagamento</h4>
                         <div class="form-field">
                             <section class="ng-cont ng-contPagamento"
@@ -141,11 +147,11 @@
                                     <h3>O QR Code do seu pagamento pix será gerado ao clicar em FINALIZAR PAGAMENTO!
                                     </h3>
                                     @if (spinner) {
-                                    <mat-spinner></mat-spinner>
+                                        <mat-spinner></mat-spinner>
                                     }
                                 </div>
                             </div>
-                            @if (isSmallScreen) {                                    
+                            @if (isSmallScreen) {                  
                                 <button mat-flat-button [disabled]="!isRequiredFinalizar()" class="btn-pagamento" type="submit"
                                     (click)="finalizarPagamento()"
                                     [ngStyle]="!isRequiredFinalizar() ? {'pointer-events': 'none', 'opacity': '0.5'} : {}">
@@ -175,9 +181,11 @@
                             <p>R$ 197,00</p>
                         </div>
                         <hr>
-                        <img src="pagamentos/compra_segura_mercado_pago.png" alt="Pagamento seguro Mercado Pago"
-                            class="img-compra-segura">
                         @if (!isSmallScreen) {
+                            <img src="pagamentos/compra_segura_mercado_pago.png" 
+                            alt="Pagamento seguro Mercado Pago"
+                            class="img-compra-segura"
+                            >
                             <button mat-flat-button [disabled]="!isRequiredFinalizar()" class="btn-pagamento" type="submit"
                                 (click)="finalizarPagamento()"
                                 [ngStyle]="!isRequiredFinalizar() ? {'pointer-events': 'none', 'opacity': '0.5'} : {}">
