--- a/src/app/features/pages/planos/checkout02/checkoutPlanos02.component.scss
+++ b/src/app/features/pages/planos/checkout02/checkoutPlanos02.component.scss
@@ -202,21 +202,22 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    flex-direction: column;
                     border-radius: 10px;
+                    border: 2px solid #ccc;
                     padding: 10px;
-                    gap: 10px 0;
+                    gap: 20px;
 
                     img {
-                        width: 80%;
-                        height: 80%;
+                        flex: 1;
+                        width: 100%;
+                        height: 90%;
                         object-fit: cover;
                         background-size: cover;
                     }
 
                     div {
+                        flex: 2;
                         width: 100%;
-                        text-align: center;
                         font-size: 16px;
                     }
                 }
