Ajustando redirecionamento no Auth Guardian e Criando tela de cadastro de empresa 01

--- a/src/app/features/pages/planos/posCheckout/posCheckout.component.html
+++ b/src/app/features/pages/planos/posCheckout/posCheckout.component.html
@@ -7,7 +7,7 @@
                 <p>Sua assinatura foi ativada com sucesso.</p>
                 <p>Você pode esta cadastrando sua empresa agora mesmo, clicando no botão abaixo!</p>
                 <div class="section">
-                    <button class="ng-btn">Cadastrar Meu Negócio</button>
+                    <button class="ng-btn" (click)="pageCadastroEmpresa()">Cadastrar Meu Negócio</button>
                 </div>
             </div>
         </div>
