--- a/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
+++ b/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
@@ -1,195 +1,154 @@
-.ng-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 10x;
-    height: 100%;
-    overflow: hidden;
-    background-color: #eee;
-    border-radius: 15px;
+.container {
+    max-width: 600px;
+    padding: 25px 30px;
+    border-radius: 12px;
+    box-shadow: 0 5px 15px rgb(0 0 0 / 0.1);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    gap: 25px 0;
 
-    .figure {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
 
-        .slide_area {
-            width: 400%;
+    h2 {
+        text-align: center;
+        font-size: 18px;
+        margin-bottom: 20px;
+        color: #ddd;
+    }
+
+    .steps-indicator {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin-bottom: 25px;
+    }
+
+    .steps-indicator div {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        font-weight: 600;
+        color: #ddd;
+        gap: 10px;
+        font-size: 10px;
+
+        .ng-cont {
             display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-direction: row;
+            gap: 0;
+            cursor: default;
+            user-select: none;
+            transition: background-color 0.3s ease;
+            padding: 0 30px;
 
-            .slide {
-                width: 25%;
-                transition: all 0.3s ease-in;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 30px;
+            .ng-bola {
+                display: inline-block;
+                width: 25px;
+                height: 25px;
+                border-radius: 50%;
+                background-color: #ccc;
+                color: #555;
+                line-height: 25px;
+                text-align: center;
+            }
 
-                .ng-form-n1 {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    flex-direction: column;
-
-                    .ng-data {
-                        display: flex;
-                        gap: 7px;
-                    }                   
-
-                    .ng-title {
-                        text-align: center;
-                        color: #555;
-                        margin-bottom: 10px;
-
-                    }
-
-                    .ng-title span {
-                        font-size: 15px;
-                        margin-bottom: 20px;
-                    }
-
-                    .ng-fieldset {
-                        width: 280px;
-                        padding: 7px;
-                        border-radius: 5px;
-                        margin-top: 20px;
-
-
-                        legend {
-                            font-size: 12px;
-                            font-weight: 500;
-                            color: #555;
-                        }
-
-                        .ng-input {
-                            background-color: red;
-                            outline: none;
-                            border: 0;
-                            width: 100%;
-                            height: 20px;
-                            font-size: 12px;
-                            color: #555;
-                        }
-
-
-
-                    }
-
-                    .ng-error {
-                        width: 100%;
-                        font-size: 12px;
-                        color: #FF8401;
-                        padding: 2px 5px;
-                    }
-
-                    .ng-section-btn {
-                        display: flex;
-                        gap: 10px;
-
-                    }
-
-
-                    .ng-btn {
-                        width: 100%;
-                        height: 35px;
-                        border-radius: 5px;
-                        background-color: #eee;
-                        border: 2px solid #41b44a;
-                        cursor: pointer;
-                        font-family: var(--font-family);
-                        font-size: 14px;
-                        font-weight: 500;
-
-                        color: #592d74;
-                        margin-top: 20px;
-
-                    }
-
-                    .ng-btn:hover {
-                        background-color: #41b44a;
-                        color: #fff;
-                    }
-
-                    .ng-btn:active {
-                        transform: scale(0.97);
-                    }
-
-                    .ng-text {
-                        color: #bbb;
-                        font-size: 12px;
-                        text-decoration: underline;
-                        margin-top: 20px;
-                    }
-
-                    .ng-btn-signup {
-                        height: 25px;
-                        border-radius: 10px;
-                        background-color: #bbb;
-                        margin-top: 20px;
-                    }
-                }
-
-
+            .ng-hr {
+                width: 40%;
+                height: 3px;
+                background-color: #ccc;
             }
 
 
-
+            .ng-bola.active,
+            .ng-hr.active,
+            .ng-p.active {
+                background-color: #af72e9;
+                box-shadow: 0 0 8px rgb(125, 46, 143);
+                color: #ddd;
+            }
         }
 
     }
 
 
 
-}
-
-.show {
-    width: 25%;
-    padding: 30px;
-}
-
-.first {
-    padding: 30px;
-    margin-left: -25%;
-}
-
-@media screen and (min-width:465px) {
-    .ng-form {
-        width: 450px;
-
-        .figure {
-            .slide_area {
-                .slide {
-                    .ng-form-n1 {
-
-                        .ng-fieldset {
-                            width: 350px;
-
-                            legend {
-                                font-size: 12px;
-                            }
-
-                            .ng-input {
-                                background-color: transparent;
-
-                            }
 
 
 
-                        }
-
-                    }
-
-
-                }
-
+    .form-step .ng-fieldset {
+        width: 245px;
+        padding: 2px;
+        border-radius: 5px;
+        margin-top: 20px;
 
 
+        legend {
+            font-size: 12px;
+            font-weight: 500;
+            color: #ddd;
+        }
+
+        .ng-input {
+            background-color: transparent;
+            outline: none;
+            border: 0;
+            width: 100%;
+            height: 20px;
+            font-size: 12px;
+            color: #eee;
+        }
+
+        .ng-password-btn {
+            display: flex;
+            padding: 2px;
+
+            mat-icon {
+                cursor: pointer;
+                transform: scale(0.0.97);
             }
-
         }
 
 
 
     }
 
+    .ng-error {
+        width: 100%;
+        font-size: 12px;
+        color: #FF8401;
+        padding: 2px 5px;
+    }
+
+
+    .buttons {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 20px;
+        gap: 0 15px;
+
+
+        .ng-btn {
+            width: 100%;
+            height: 35px;
+            border-radius: 5px;
+            border: 1px solid #eee;
+            cursor: pointer;
+            font-family: var(--font-family);
+            font-size: 14px;
+            font-weight: 500;
+            color: #592d74;
+            margin-top: 20px;
+
+        }
+
+        .ng-btn:hover {
+            background-color: #c8c8c8;
+        }
+
+        .ng-btn:active {
+            transform: scale(0.97);
+
+        }
+    }
 }
